# lab-cs2-project

./: CMakeLists.txt  ChatRoomScreen.cpp  ChatRoomScreen.h  LoginScreen.cpp  LoginScreen.h  MainWindow.cpp  MainWindow.h  NetworkManager.cpp  NetworkManager.h  README.md  SettingsScreen.cpp  SettingsScreen.h  applogic.cpp  applogic.h  main.cpp
